# jeff_ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.ollama.yml  docker-compose.prod.yml  docker-compose.yml  langgraph.json  pyproject.toml
backend/: .env.example  Dockerfile.backend  Makefile  SAVE_PATH  docker-compose.yml  entrypoint.sh  image_server.py  langgraph.json  mcp_servers.json.example  mcp_tool_overrides.json  pyproject.toml  register_assistant.py  server.py
backend/benchmarks/: baseline.py  eval_set.json
backend/outputs/: Documento_de_Requisito_Sistema_Gestao_Alugueis_2026-05-12.md  SPEC-001_Sistema_Emissao_Nota_Fiscal_Eletronica.md  documento_requisitos_vps_12_05_2026_214320.md
backend/scripts/: wait_for_postgres.py
backend/skills/image-generation/: SKILL.md
backend/src/agents/: agent_com_sub.py  requirements_specialist.py  technical_requirements_agent.py
backend/src/agents/assistant/: __init__.py  agent.py
backend/src/agents/prompts/: technical_spec_prompt.py
backend/src/agents/sdd/: __init__.py  orchestrator.py
backend/src/agents/subagents/: architecture_subagent.py  database_subagent_subagent.py  delegate_subagent.py  fullstack.py  image_design.py  validation_subagent.py
backend/src/agents/unified/: agent.py  datetime_utils.py  effects.py  envelope_middleware.py  envelope_proposal.py  mcp_admin_api.py  mcp_client.py  mcp_config_store.py  mcp_tool_overrides.py  mcp_tools_middleware.py  scoped_skills_middleware.py  tier_config.py
backend/src/application/: __init__.py
backend/src/application/ports/: __init__.py  document_sink.py  document_writer.py  image_gen.py  reference_image_fetch.py  sdd_artifact_store.py  style_repository.py
backend/src/application/use_cases/: __init__.py  create_document.py  generate_requirements_document.py  get_next_feature_number.py  plan_and_create_image.py
backend/src/backends/: memory_backend.py
backend/src/composition/: __init__.py  backends.py  dependencies.py  graphs.py
backend/src/domain/: __init__.py
backend/src/domain/documents/: __init__.py  blocks.py  document_content.py  document_result.py  document_spec.py  docx_spec.py  pptx_spec.py  read_limits.py  xlsx_spec.py
backend/src/domain/imaging/: __init__.py  design_style.py  image_design.py  image_reference.py  style_consistency.py
backend/src/domain/requirements/: __init__.py  document_section.py  merge.py  requirement_document.py
backend/src/domain/sdd/: __init__.py  feature.py  feature_number.py  phase.py  pipeline.py  validation.py
backend/src/domain/shared/: __init__.py  errors.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/attachments/: __init__.py  schema.py  store.py
backend/src/infrastructure/auth/: __init__.py  db.py  dependencies.py  schema.py  security.py  session_resolver.py  sessions.py  users.py
backend/src/infrastructure/documents/: __init__.py  docx_writer.py  output_target.py  pptx_writer.py  xlsx_writer.py
backend/src/infrastructure/filesystem/: __init__.py  filesystem_document_sink.py  filesystem_sdd_artifact_store.py
backend/src/infrastructure/llm/: __init__.py  gemini_image_adapter.py
backend/src/infrastructure/media/: __init__.py  attachment_validation.py  image_signatures.py  (+1 more)
backend/src/mcp/: context7_mcp.py
backend/src/models/: docx_document.py  fallback_model.py  gemini_model.py  image_design.py  ollama_embeddings.py  ollama_model.py  openrouter_model.py  pptx_document.py  xlsx_document.py
backend/src/scripts/: setup.py
backend/src/stores/: __init__.py
backend/src/tools/: arxiv_tool.py  attachment_context.py  code_editing_tools.py  create_docx_document_tool.py  create_pptx_presentation_tool.py  create_xlsx_spreadsheet_tool.py  deep_agent_tools.py  document_memory_tools.py  fetch_reference_image_tool.py  generate_image_tool.py  git_tools.py  main_alter_image.py  memory_tools.py  read_document_tool.py  scientific_search_tool.py  sdd_tools.py  self_extension.py  style_memory_tools.py  tavily_tool.py  technical_spec_tools.py  test_runner_tools.py  webfetch.py  zip_files_tool.py
backend/templates/sdd/: constitution-template.md  data-model-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/tests/: conftest.py  test_attachment_context.py  test_attachment_store.py  test_attachment_validation.py  test_attachments_router_auth.py  test_auth_db.py  test_auth_dependencies.py  test_auth_router.py  test_auth_schema.py  test_auth_security.py  test_auth_sessions.py  test_auth_users.py  test_code_editing_tools.py  test_current_date_context.py  test_document_memory_tools.py  test_documents_read_domain.py  test_documents_router.py  test_docx_writer.py  test_effects.py  test_envelope_lifecycle.py  test_envelope_middleware.py  test_envelope_middleware_order.py  test_envelope_proposal.py  test_gemini_image_adapter.py  test_generate_image_tool.py  test_generate_requirements_document.py  test_git_tools.py  test_httpx_reference_image_fetch.py  test_image_design_subagent.py  test_image_server_documents.py  test_images_router.py  test_imaging_domain.py  test_langgraph_auth.py  test_mcp_admin_api.py  test_mcp_client.py  test_mcp_config_store.py  test_mcp_tool_overrides.py  test_mcp_tools_middleware.py  test_memory_tools.py  test_multipart_dockerfile_backend.py  (+22 more)
backend/tests/fixtures/: mcp_test_http_server.py  mcp_test_server.py
(+82 files in other folders)
