[project]
name = "JeffAi"
version = "0.1.0"
description = "Deep agent developer assistent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.8",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    "langsmith>=0.0.0",
    "python-dotenv>=1.0.0",
    "wcmatch>=10.0",
    "tavily>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "debugpy>=1.6.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"