[project]
name = "JeffAi"
version = "0.1.0"
description = "Deep agent developer assistent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.8",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    "langsmith>=0.0.0",
    "python-dotenv>=1.0.0",
    "wcmatch>=10.0",
    "tavily>=1.1.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "debugpy>=1.6.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- Clean Architecture / DDD: Regra da Dependência (enforçada por import-linter) ---
# Rodar com: `lint-imports` (a partir de backend/, com `src` no PYTHONPATH).
# As dependências apontam para dentro: composition -> infrastructure -> application -> domain.
# Camadas ainda em migração (agents/tools/models seguem fora dos contratos por ora).
[tool.importlinter]
root_package = "src"
# Necessário porque o contrato `forbidden` referencia pacotes externos (langgraph, deepagents, ...).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Regra da Dependencia (camadas Clean Architecture)"
type = "layers"
# Ordem do mais externo (topo, pode importar tudo abaixo) ao mais interno (base).
layers = [
    "src.composition",
    "src.infrastructure",
    "src.application",
    "src.domain",
]
# Módulos ainda não migrados para as camadas; ignorados até a migração concluir.
exhaustive = false

[[tool.importlinter.contracts]]
name = "Nucleo (dominio + aplicacao) livre de frameworks e I/O"
type = "forbidden"
# O núcleo puro (domínio + casos de uso/ports) não pode depender de frameworks
# ou drivers — só do domínio e de abstrações (ports).
source_modules = ["src.domain", "src.application"]
forbidden_modules = [
    "langgraph",
    "deepagents",
    "langchain",
    "langchain_core",
    "langchain_ollama",
    "langchain_google_genai",
    "langchain_anthropic",
    "psycopg",
    "psycopg2",
]